--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-# Pycharm artifacts
+# Webstorm artifacts
 .idea
-
-# Less artifacts
-client/css/*.css
-
-# js artifacts
-client/js/systems.controllers.js
-client/js/systems.filters.js
-client/js/systems.widgets.js
-client/js/systems.templates.js
-client/js/client.templates.js
-
-# nedb artifacts
-db/*.nedb
 
 # Node artifacts
 node_modules
+
+# music
+music
