Added omega logger for improved logging output, and made app pick a new random song from the list if it's not connected to the website.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "speaker": "0.0.10",
     "lame": "~1.0.3",
     "walk": "~2.2.1",
-    "fft": "~0.2.1"
+    "fft": "~0.2.1",
+    "omega-logger": "~0.5.2"
   }
 }
